categories works, getting products from database works, scrolling to section has issue (double scroll idk what causes that)

--- a/laravel/chronoLux/public/css/product_page.css
+++ b/laravel/chronoLux/public/css/product_page.css
@@ -392,6 +392,12 @@ select{
     background-color: #2f4c39;
 }
 
+.not-found{
+    color: gray;
+    font-size: 25px;
+    font-weight: bold;
+    padding: 50px; 
+}
 
 
 /************************* MEDIA *************************/
